# 7-PaintingQMLItem

./: README.adoc
QPaintingQMLItems/: CMakeLists.txt
QPaintingQMLItems/main/: CMakeLists.txt
QPaintingQMLItems/main/inc/: learnqtlogo.hpp
QPaintingQMLItems/main/qml/: Main.qml
QPaintingQMLItems/main/src/: learnqtlogo.cpp  main.cpp
